--- a/.github/workflows/buildandtest.yaml
+++ b/.github/workflows/buildandtest.yaml
@@ -30,14 +30,14 @@ jobs:
 
     - name: Test with coverage
       run: |
-        go test -v -coverprofile=coverage.out ./...
+        go test -v -race -coverprofile=coverage.out ./...
         go tool cover -func=coverage.out
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        file: ./coverage.out # optional
-        flags: unittests # optional
-        name: codecov-umbrella # optional
-        fail_ci_if_error: true # optional
+        file: ./coverage.out
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
